@@ -44,7 +44,6 @@ AC_PREREQ([2.58])
 AC_CONFIG_SRCDIR([tao/TAO_Internal.cpp])
 
 AC_CONFIG_AUX_DIR([../aux_config])
-AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_MACRO_DIR([../m4])
 
 dnl Check what platform we are running on.
